# face_detection

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: face.mnn
app/src/main/cpp/: face.cpp  mnnnetnative.cpp
app/src/main/java/com/taobao/android/mnn/: MNNNetInstance.java
app/src/main/java/ru/gordinmitya/facedetection/: AssetUtil.kt  Face.java  FaceNative.java  MNNFaceDetector.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
